--- a/src/styles/Page1.css
+++ b/src/styles/Page1.css
@@ -203,3 +203,35 @@
   font-weight: lighter;
   gap:10px;
 }
+
+.nav-options{
+  cursor: pointer;
+}
+
+.options{
+  visibility: hidden;
+  display:flex;
+  flex-direction: column;
+  background:rgba(91, 141, 154, 0.726);
+  color:white;
+  z-index: 999;
+  width: 100px;
+  font-size: 14px;
+  border-radius: 5px;
+  &:hover{
+    visibility: visible;
+  }
+}
+
+.nav-options:hover ~ .options{
+  visibility: visible;
+}
+
+.options a{
+  padding: 8px;
+  /* border-bottom: 0.1px solid lightblue; */
+  &:hover{
+    background-color: lightblue;
+    cursor: pointer;
+  }
+}
