[wip] added new app details page and other fixes

--- a/src/index.css
+++ b/src/index.css
@@ -75,6 +75,10 @@ html,body{
   min-width: 320px;
   min-height: 100vh;
   height: 100%;
-  overflow: hidden;
+  overflow: auto;
 } 
+
+body::-webkit-scrollbar{
+  display: none;
+}
 
