--- a/src/styles/Page6.css
+++ b/src/styles/Page6.css
@@ -1,18 +1,35 @@
-.rotating-icon1{
-    width:100px;
-    aspect-ratio:1;
-    animation: rotate 2s linear infinite;
+.rotating-icon1 {
+  position: relative;
+  top:2px;
+  left:0.5px;
+  width: 100px;
+  aspect-ratio: 1;
+  animation: rotate 2s linear infinite;
 }
 
 @keyframes rotate {
-  0% {transform: rotate(0deg);}
-  100% {transform: rotate(360deg);}
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
 }
 
-.rotating-center{
-    width: 100%;
-    height: 60%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+.rotating-center {
+  width: 100%;
+  height: 60%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+}
+
+.cover-circle {
+  position: absolute;
+  width: 70px;
+  aspect-ratio: 1;
+  background-color: transparent;
+  border: 10px solid white;
+  border-radius: 50%;
 }
