--- a/src/styles/Page7.css
+++ b/src/styles/Page7.css
@@ -25,14 +25,14 @@
     display: flex;
     align-items: end;
     width:100%;
-    font-size: 4rem;
+    font-size: 50px;
     font-family: 'Roboto','San-serif';
     font-weight: bold; 
 }
 .sub-d{
      height:20%;
      width:100%;
-     font-size: 3em;
+     font-size: 40px;
     font-family: 'Roboto','San-serif';
     
 }
