[wip] Registration Part added and few additions to the home button

--- a/src/index.css
+++ b/src/index.css
@@ -76,6 +76,7 @@ html,body{
   min-height: 100vh;
   height: 100%;
   overflow: auto;
+  font-family: 'Roboto',sans-serif;
 } 
 
 body::-webkit-scrollbar{
