--- a/src/styles/Page6.css
+++ b/src/styles/Page6.css
@@ -18,7 +18,7 @@
 
 .rotating-center {
   width: 100%;
-  height: 60%;
+  height: 60vh;
   display: flex;
   align-items: center;
   justify-content: center;
